# zetaterminal

./: .gitignore  404.html  AUTOMATION_MARKET_DATA.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  N8N_AUTOMATION.md  PARQUET_EXPORT.md  QUICK_START.md  README.md  REGISTRY_FORMAT.md  SUPABASE_SETUP.md  SUPABASE_STORAGE_SETUP.md  SWAP_DA_test_main.ipynb  banks_array_content.txt  banks_output.js  index.html  package-lock.json  package.json  paste.txt  process_banks.py  railway.toml  render.yaml  tailwind.config.js  vite.config.ts  zetaterminal-playground.html  Новый текстовый документ (5).txt
.github/: claude-config.json
3d-monte-carlo/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
api/: types.ts
assets/: AdminPanel-241Y9j3M.js  AdminPanel-6_rntfT3.js  AdminPanel-8AXspX7j.js  AdminPanel-BMEnYziC.js  AdminPanel-BQ9GSaR1.js  AdminPanel-BQovo_uu.js  AdminPanel-BSrT6r2m.css  AdminPanel-BVHr2osd.js  AdminPanel-BVMXfjc3.js  AdminPanel-ByVeizXr.js  AdminPanel-BynCCBA3.js  AdminPanel-CDeJ9BFJ.js  AdminPanel-CNYPy6w7.js  AdminPanel-Ckq5S47v.js  AdminPanel-Cme4Lt6A.js  AdminPanel-DF8XJRL7.js  AdminPanel-DeMU9UUu.js  AdminPanel-DslvaQqa.css  AdminPanel-DsoNilW8.js  AdminPanel-dWBjuYYn.css  AdminPanel-f75Kzt-m.js  AdminPanel-gKFMohqB.js  AdminPanel-pkjfV1cU.js  AdminPanel-zmp0Y7b1.js  AdversarialStress-03P3fw_G.js  AdversarialStress-2FCdB5sL.js  AdversarialStress-5Rli1XNO.css  (+2408 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
(+564 files in other folders)
